--- a/Index.html
+++ b/Index.html
@@ -35,12 +35,12 @@
 
     <main>
         <section class="hero">
-            <div class="hero-background"></div> <!-- Background image layer -->
-            <div class="container hero-content">
-                <h1>Bridging Digital & Physical Needs</h1>
-                <p>Comprehensive services from digital designs to physical repairs.</p>
-                <a href="contact.html" class="cta-button">Get Started</a>
-            </div>
+    <!-- Remove this div: <div class="hero-background"></div> -->
+    <div class="container hero-content">
+        <h1>Bridging Digital & Physical Needs</h1>
+        <p>Comprehensive services from digital designs to physical repairs.</p>
+        <a href="contact.html" class="cta-button">Get Started</a>
+    </div>
         </section>
 
         <!-- You can add more sections here on the homepage if needed, e.g., featured services -->
