--- a/about.html
+++ b/about.html
@@ -57,6 +57,6 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="js_script.js"></script>
 </body>
 </html>
