--- a/testimonials.html
+++ b/testimonials.html
@@ -74,6 +74,6 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="js_script.js"></script>
 </body>
 </html>
