--- a/testimonials.html
+++ b/testimonials.html
@@ -35,30 +35,40 @@
 
     <main class="container">
         <section class="testimonials-section">
-            <h2>Testimonials</h2>
-
-            <!-- Example Testimonial Structure - Repeat for each testimonial -->
-            <div class="testimonial-item">
-                <div class="testimonial-content">
-                    <p>"WillService provided excellent web development services. They were professional, efficient, and delivered exactly what we needed. Highly recommended!"</p>
-                </div>
-                <div class="testimonial-author">
-                    <p>- John Doe, Client</p>
-                </div>
+        <section class="testimonials-section">
+    <h2>What Our Clients Say</h2>
+    
+    <div class="testimonial-item">
+        <div class="testimonial-header">
+            <img src="https://source.unsplash.com/100x100/?portrait,businessman" 
+                 alt="Client portrait" 
+                 class="testimonial-image">
+            <div class="client-info">
+                <p class="client-name">John Doe</p>
+                <p class="client-role">Business Owner</p>
             </div>
+        </div>
+        <div class="testimonial-content">
+            <p>"WillService provided excellent web development services. They were professional, efficient, and delivered exactly what we needed. Highly recommended!"</p>
+        </div>
+    </div>
 
-            <div class="testimonial-item">
-                <div class="testimonial-content">
-                    <p>"I was amazed by the graphic design work WillService did for my brand. It perfectly captured my vision and helped elevate my business."</p>
-                </div>
-                <div class="testimonial-author">
-                    <p>- Jane Smith, Client</p>
-                </div>
+    <div class="testimonial-item">
+        <div class="testimonial-header">
+            <img src="https://source.unsplash.com/100x100/?portrait,businesswoman" 
+                 alt="Client portrait" 
+                 class="testimonial-image">
+            <div class="client-info">
+                <p class="client-name">Jane Smith</p>
+                <p class="client-role">Marketing Director</p>
             </div>
+        </div>
+        <div class="testimonial-content">
+            <p>"The graphic design work completely transformed our brand identity. WillService understood our vision perfectly!"</p>
+        </div>
+    </div>
 
-            <!-- Add more testimonials here -->
-
-            <p>If you'd like to share your experience with WillService, please <a href="contact.html">contact us</a>!</p>
+    <!-- Add more testimonials as needed -->
         </section>
     </main>
 
