--- a/services.html
+++ b/services.html
@@ -37,30 +37,37 @@
         <section class="services-section">
             <h2>Our Services</h2>
             <div class="services-grid">
-                <div class="service-item">
-                    <h3>Graphic Design</h3>
-                    <p>Professional branding and visual identity solutions.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Photo Editing</h3>
-                    <p>Advanced image manipulation and enhancement.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Phone Repair</h3>
-                    <p>Expert mobile device maintenance and repairs.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Web Development</h3>
-                    <p>Full-stack custom website solutions.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Furniture Design</h3>
-                    <p>Custom furniture creation and woodworking.</p>
-                </div>
-                <div class="service-item">
-                    <h3>Tech Solutions</h3>
-                    <p>Comprehensive technology-related services.</p>
-                </div>
+    <div class="service-item">
+        <img src="https://source.unsplash.com/800x600/?graphic-design" 
+             alt="Graphic Design" 
+             class="service-image">
+        <div class="service-content">
+            <h3>Graphic Design</h3>
+            <p>Professional branding and visual identity solutions.</p>
+        </div>
+    </div>
+
+    <div class="service-item">
+        <img src="https://source.unsplash.com/800x600/?photo-editing" 
+             alt="Photo Editing" 
+             class="service-image">
+        <div class="service-content">
+            <h3>Photo Editing</h3>
+            <p>Advanced image manipulation and enhancement.</p>
+        </div>
+    </div>
+
+    <div class="service-item">
+        <img src="https://source.unsplash.com/800x600/?phone-repair" 
+             alt="Phone Repair" 
+             class="service-image">
+        <div class="service-content">
+            <h3>Phone Repair</h3>
+            <p>Expert mobile device maintenance and repairs.</p>
+        </div>
+    </div>
+
+    <!-- Add more service items with images -->
             </div>
         </section>
     </main>
