--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,12 @@
     <div class="container hero-content">
         <h1>Bridging Digital & Physical Needs</h1>
         <p>Comprehensive services from digital designs to physical repairs.</p>
-        <a href="contact.html" class="cta-button">Get Started</a>
+        <div class="hero-cta">
+            <a href="contact.html" class="cta-button">Get Started</a>
+            <img src="https://source.unsplash.com/400x300/?technology" 
+                 alt="Technology Solutions" 
+                 class="hero-illustration">
+        </div>
     </div>
         </section>
 
