--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section class="hero" style="background-image: url('https://source.unsplash.com/1600x900/?technology,blue');">
     <div class="container hero-content">
         <h1>Bridging Digital & Physical Needs</h1>
         <p>Comprehensive services from digital designs to physical repairs.</p>
