--- a/testimonials.html
+++ b/testimonials.html
@@ -39,14 +39,19 @@
     <h2>What Our Clients Say</h2>
     
     <div class="testimonial-item">
-        <div class="testimonial-header">
-            <img src="https://source.unsplash.com/100x100/?portrait,businessman" 
-                 alt="Client portrait" 
-                 class="testimonial-image">
-            <div class="client-info">
-                <p class="client-name">John Doe</p>
-                <p class="client-role">Business Owner</p>
-            </div>
+    <div class="testimonial-header">
+        <img src="https://source.unsplash.com/100x100/?portrait,businessman" 
+             alt="Client portrait" 
+             class="testimonial-image">
+        <div class="client-info">
+            <p class="client-name">John Doe</p>
+            <p class="client-role">Business Owner</p>
+        </div>
+    </div>
+    <div class="testimonial-content">
+        <p>"WillService provided excellent web development services. They were professional, efficient, and delivered exactly what we needed. Highly recommended!"</p>
+    </div>
+    </div>
         </div>
         <div class="testimonial-content">
             <p>"WillService provided excellent web development services. They were professional, efficient, and delivered exactly what we needed. Highly recommended!"</p>
