--- a/services.html
+++ b/services.html
@@ -48,13 +48,13 @@
     </div>
 
     <div class="service-item">
-        <img src="https://source.unsplash.com/800x600/?photo-editing" 
-             alt="Photo Editing" 
-             class="service-image">
-        <div class="service-content">
-            <h3>Photo Editing</h3>
-            <p>Advanced image manipulation and enhancement.</p>
-        </div>
+    <img src="https://source.unsplash.com/800x600/?graphic-design" 
+         alt="Graphic Design" 
+         class="service-image">
+    <div class="service-content">
+        <h3>Graphic Design</h3>
+        <p>Professional branding and visual identity solutions.</p>
+    </div>
     </div>
 
     <div class="service-item">
